# lowell

./: Cargo.toml  Justfile  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
lowell-cli/: Cargo.toml
lowell-cli/src/: main.rs  tracing_init.rs
lowell-cli/src/cli/: mod.rs
lowell-cli/src/cli/inspect/: mod.rs  uki.rs
lowell-cli/src/cli/uki/: inspect.rs  mod.rs
lowell-core/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
lowell-core/src/: lib.rs  profile.rs
lowell-core/src/formats/: initramfs.rs  mod.rs  osrel.rs  pe.rs
lowell-core/src/inspect/: ext.rs  mod.rs  uki.rs
lowell-core/src/uki/: ext.rs  inspect.rs  mod.rs
profiles/: kvm-ostree.toml
