[package]
name        = "lowell-core"
version     = "0.0.1"
edition     = "2021"
license     = "Apache-2.0 OR MIT"
description = "OCI-native tooling for hermetic, host-agnostic boot artifacts (UKI/initramfs)"
repository  = "https://github.com/SamD2021/lowell"
readme      = "../README.md"
keywords    = ["uki", "initramfs", "oci", "boot", "kernel"]
categories  = ["command-line-utilities", "os"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
goblin = "0.10"
rs-release = "0.1.11"
sha2 = { version = "0.10", features = ["asm"]}


[dev-dependencies]
tempfile = "3"
